[package]
name = "st25r3911b"
version = "0.1.0"
authors = ["Reinis Muiznieks <muiznieks.reinis@gmail.com>"]
edition = "2021"
description = "A platform agnostic driver to interface the ST25R3911B (NFC/RFID reader/writer)"
license = "MIT OR Apache-2.0"
keywords = ["rfid", "st25r3911b", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
embedded-hal = "=1.0.0-alpha.11"
bitflags = "1.3.2"
defmt = { version = "0.3", optional = true }

[features]
# default = ["defmt", "logging"]
# Allow the crate to make use of the std library
std = []
# Enable defmt logs in the code, useful for debugging
logging = ["defmt"]
